crates/wesl-test/tests/snapshots/testsuite__bulkTests::webgpu-samples::sample__a-buffer__translucent.wgsl.snap
---
source: crates/wesl-test/tests/testsuite.rs
expression: res.syntax.to_string()
---
@binding(1) @group(0)
var<storage, read_write> heads: Heads;

@binding(2) @group(0)
var<storage, read_write> linkedList: LinkedList;

@binding(3) @group(0)
var opaqueDepthTexture: texture_2d<f32>;

@binding(4) @group(0)
var<uniform> sliceInfo: SliceInfo;

@binding(0) @group(0)
var<uniform> uniforms: Uniforms;

struct Heads {
    numFragments: atomic<u32>,
    data: array<atomic<u32>>
}

struct LinkedList {
    data: array<LinkedListElement>
}

struct LinkedListElement {
    color: vec4<f32>,
    depth: f32,
    next: u32
}

struct SliceInfo {
    sliceStartY: i32
}

struct Uniforms {
    modelViewProjectionMatrix: mat4x4<f32>,
    maxStorableFragments: u32,
    targetWidth: u32
}

struct VertexOutput {
    @builtin(position)
    position: vec4<f32>,
    @location(0) @interpolate(flat, either)
    instance: u32
}

@fragment
fn main_fs(@builtin(position) position: vec4<f32>, @location(0) @interpolate(flat, either) instance: u32) {
    let fragCoords: vec2<i32> = vec2<i32>(position.xy);
    let opaqueDepth: f32 = textureLoad(opaqueDepthTexture, fragCoords, 0).x;
    if position.z >= opaqueDepth {
        discard;
    }
    let headsIndex: u32 = u32(fragCoords.y - sliceInfo.sliceStartY) * uniforms.targetWidth + u32(fragCoords.x);
    let fragIndex: u32 = atomicAdd(&heads.numFragments, 1u);
    if fragIndex < uniforms.maxStorableFragments {
        let lastHead: u32 = atomicExchange(&heads.data[headsIndex], fragIndex);
        linkedList.data[fragIndex].depth = position.z;
        linkedList.data[fragIndex].next = lastHead;
        linkedList.data[fragIndex].color = vec4(array(vec3(1f, 0f, 0f), vec3(0f, 1f, 0f), vec3(0f, 0f, 1f), vec3(1f, 0f, 1f), vec3(1f, 1f, 0f), vec3(0f, 1f, 1f))[(instance + 3u) % 6u], 0.3);
    }
}

@vertex
fn main_vs(@location(0) position: vec4<f32>, @builtin(instance_index) instance: u32) -> VertexOutput {
    var output: VertexOutput;
    let row: u32 = instance / 2u;
    let col: u32 = instance % 2u;
    let xOffset: f32 = -46.875 + 62.5 * f32(col) + f32(row % 2u == 0u) * 31.25;
    let zOffset: f32 = -44.875 + f32(row) * 31.25;
    let offsetPos: vec4<f32> = vec4(position.x + xOffset, position.y, position.z + zOffset, position.w);
    output.position = uniforms.modelViewProjectionMatrix * offsetPos;
    output.instance = instance;
    return output;
}
